[package]
name = "sentinel"
version = "0.1.0"
edition = "2024"


[dependencies]
slog = "2.7"
slog-envlogger = "2.0"
slog-term = "2.9"
slog-async = "2.7"
cargo-watch = "8.5.3"
config = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
dotenv = "0.15"
device_query = "2.1.0"
tokio = { version = "1.43.0", features = ["full"] }
chrono = "0.4"
windows = { version = "0.59.0", features = [
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging"
]}
sysinfo = "0.29"